base/src/main/java/com/example/base/error/mapper/ErrorMapper.kt
package com.example.base.error.mapper

interface ErrorMapper {

    fun mapError(error: Throwable): Throwable
}